<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bsbm</groupId>
    <artifactId>bsbm-versioning</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>BSBM Versioning</name>
    <description>
        RDF version graph with a global merge policy (benchmark.versioning).
        Self-contained Maven module: Apache Jena parses and generates all RDF
        version content — the per-version N-Quads datasets and the PROV-O
        provenance graph. The rest of the BSBM sources keep the legacy Ant
        build (../build.xml) and its jars under ../lib/.
    </description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <jena.version>5.5.0</jena.version>
        <!-- Default main class of exec:java; override on the command line
             with -Dexec.mainClass=benchmark.versioning.InferenceValidationMain -->
        <exec.mainClass>benchmark.versioning.Main</exec.mainClass>
        <junit.version>5.11.4</junit.version>
        <junit.platform.version>1.11.4</junit.platform.version>
    </properties>

    <dependencies>
        <!-- Apache Jena: parses/generates all RDF (per-version N-Quads
             datasets and the PROV-O provenance.ttl). -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>${jena.version}</version>
        </dependency>
        <!-- Jena SHACL engine, used by the Inference validation program to
             validate versions against SHACL shapes (closed-world regime). -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-shacl</artifactId>
            <version>${jena.version}</version>
        </dependency>
        <!-- SLF4J binding so Jena does not warn about a missing provider. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.16</version>
            <scope>runtime</scope>
        </dependency>
        <!-- JUnit 5 (Jupiter) for the tests under src/test/java. The launcher
             is pinned explicitly so the surefire JUnit-Platform provider
             resolves a matching version. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Standard Maven layout: src/main/java and src/test/java. -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <!-- Runs the JUnit 5 tests (mvn test). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
            <!-- Run the demo with: mvn compile exec:java (the main class comes
                 from the exec.mainClass property above). -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
        </plugins>
    </build>
</project>
